force-app/main/default/objects/Registration__c/fields/Certificate_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Eligible__c</fullName>
    <formula>IF(
    TEXT(Attendance__r.Attendance_Status__c) = &quot;Present&quot;,
    &quot;Eligible&quot;,
    &quot;Not Eligible&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Eligibe</label>
    <type>Text</type>
</CustomField>