force-app/main/default/objects/Registration__c/fields/Certificate_Eligible_Students__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Eligible_Students__c</fullName>
    <formula>TEXT (Attendance__r.Attendance_Status__c)  = &quot;Present&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Eligible Students</label>
    <type>Checkbox</type>
</CustomField>