force-app/main/default/objects/Registration__c/fields/Certificate_Eligible_Update__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Eligible_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Eligible Update</label>
    <type>Checkbox</type>
</CustomField>