force-app/main/default/objects/Registration__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <label>QR Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>