force-app/main/default/objects/Registration__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>