force-app/main/default/objects/Registration__c/fields/Registration_Key__c.field-meta.xml
<CustomField>
    <fullName>Registration_Key__c</fullName>
    <label>Registration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>