force-app/main/default/objects/Registration__c/fields/Registration_Open__c.field-meta.xml
<CustomField>
    <fullName>Registration_Open__c</fullName>
    <formula>Today() &lt;= Registration_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Open</label>
    <type>Checkbox</type>
</CustomField>