force-app/main/default/objects/Registration__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <label>Team Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>