force-app/main/default/objects/Registration__c/validationRules/Payment_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Payment amount must be greater than zero.</errorMessage>
</ValidationRule>