force-app/main/default/objects/Registration__c/validationRules/Registration_After_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_After_Close</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Registration is closed. Participants cannot register after registration closes.</errorMessage>
</ValidationRule>