force-app/main/default/objects/Registration__c/validationRules/Registration_Deadline_Before_Event_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Deadline_Before_Event_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Registration_Deadline__c  &gt;=  Event__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Registration_Deadline__c</errorDisplayField>
    <errorMessage>Registration Deadline must be before the Event Date.</errorMessage>
</ValidationRule>