force-app/main/default/objects/Registration__c/validationRules/Student_Should_not_Reg_After_deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Should_not_Reg_After_deadline</fullName>
    <active>true</active>
    <errorConditionFormula>Registration_Date__c     &gt;    Event__r.Registration_Deadline__c</errorConditionFormula>
    <errorMessage>One Student Should not register after Registration closes</errorMessage>
</ValidationRule>