force-app/main/default/objects/Registration__c/validationRules/Valid_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Event__r.Approval_Status__c) &lt;&gt; &quot;Approved&quot;</errorConditionFormula>
    <errorMessage>Registration is allowed only after the event has been approved.</errorMessage>
</ValidationRule>